# ray-tracing

./: CMakeLists.txt  README.md
include/: camera.h  light.h  ray.h  solid.h  sphere.h
src/: RayTracing  main.cpp  ray.cpp  tmp.cpp
src/shaders/: rayshader.fs  rayshader.vs
src/solids/: sphere.cpp
src/util/: shader.cpp  shader.h
test/: test.cpp
